[tool.poetry]
name = "how-many-vessels-sound"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13.0"
ultralytics = "^8.3.161"
torchaudio = "^2.7.1"
comet-ml = "^3.49.11"
soundfile = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
